Add multi armed bandits post. Set site title, remove quick start guide, add latex support.

--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@
 minimal_mistakes_skin    : "default" # "air", "contrast", "dark", "dirt", "mint", "sunrise"
 
 # Site Settings
-locale                   : "en"
-title                    : "Site Title"
+locale                   : "en-GB"
+title                    : "Michael King"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : "Michael King"
+description              : ""
+url                      : "https://michaeljking.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : MichaelJKing/michaeljking.github.io
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -51,6 +51,7 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
+theme                    : minimal-mistakes-jekyll
 
 # SEO Related
 google_site_verification :
@@ -85,7 +86,7 @@ analytics:
 author:
   name             : "Michael King"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "."
+  bio              : ""
   location         : "UK"
   email            :
   uri              :
@@ -247,7 +248,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       comments: # true
-      share: true
-      related: true
+      share: false
+      related: false
